[tool.poetry]
name = "sqlmodel-tutor"
version = "0.1.0"
description = "Python SQLModel tutor"
authors = ["johnnyGogo <johnny.liu@taroko.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
